correction bug align ancre

--- a/reservia.css
+++ b/reservia.css
@@ -43,6 +43,7 @@ header {
   
 }
 #ancre a {
+  font-size: 1.1em;
   text-decoration: none;
   color: black;
   padding-top: 50px;
@@ -50,15 +51,17 @@ header {
   text-align: center; /* puis centre le texte */
 }
 #ancre a:hover{
-  color: #0065FC ;
-  border-top: 2px #0065FC solid;
-  padding-top: -30px;
+  color: #0065FC;
+  border-top: 3px #0065FC solid;
+  padding-top: 47px; /* pour annuler le recul bottom de 3px au survol */
 } 
 
 #lien_inscire {
   width: 10%;
   padding-top: 50px;
   text-align: center;
+  color: #0065FC;
+  font-weight: bold;
 }
 nav {
   border: 1px dashed;
